--- a/templates/print.html
+++ b/templates/print.html
@@ -8,16 +8,40 @@
   <div id="page-container">
     <h1>Cheque Printer</h1>
     <div id='form'>
-      <label for="name">Name</label>
-      <input type="text" name="name" id="name">
-      <label for="reference">Reference</label>
-      <input type="text" name="reference" id="reference">
-      <label for="chequeNumber">Cheque Number</label>
-      <input type="text" name="chequeNumber" id="chequeNumber">
-      <label for="amount">Amount</label>
-      <input type="text" name="amount" id="amount">
+      <div class="input_holder">
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name">    
+      </div>
+      <div class="input_holder">
+        <label for="reference">Reference</label>
+        <input type="text" name="reference" id="reference"> 
+      </div>
+      <div class="input_holder">
+        <label for="chequeNumber">Cheque Number</label>
+        <input type="text" name="chequeNumber" id="chequeNumber">
+      </div>
+      <div class="input_holder">
+        <label for="amount">Amount</label>
+        <input type="text" name="amount" id="amount">
+      </div> 
       <button id="sub" type="submit" onclick="print()">Submit</button>
     </div>
+    <div id="history">
+      <h2>History</h2>
+      <table id=history_table>
+        {% for entry in record %}
+        <tr>
+          <td>{{entry[0]}}</td>
+          <td>{{entry[1]}}</td>
+          <td>{{entry[2]}}</td>
+          <td>{{entry[3]}}</td>
+          <td>{{entry[4]}}</td>
+          <td><button>Print</button></td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+    <script type="text/javascript">var book = {{record|safe}}</script>
     <script src="{{ url_for('static', filename='base.js') }}"></script>
   </div>
   <div id="footer">
