--- a/static/style.css
+++ b/static/style.css
@@ -56,7 +56,7 @@ table button{
 }
 
 button:hover {
-  font-size: 1.25em;
+  font-size: 1.1em;
   color: white;
   background: rgba(90, 127, 165);
   cursor: pointer;
@@ -85,7 +85,7 @@ table {
   width: 100%;
   padding: 10%;
   border-collapse: collapse;
-  font-size: 1.3em;
+  font-size: 1em;
 }
 
 tr {
@@ -95,6 +95,12 @@ tr {
 
 td {
   padding-top: 0.7em;
+}
+
+.name_row {
+  font-size: 1.1em;
+  color: #e3b434;
+  height: 3em;
 }
 
 #page-container {
