--- a/static/style.css
+++ b/static/style.css
@@ -10,8 +10,8 @@ body {
 
 #form {
   display: flex;
-  justify-content: center;
-  
+  justify-content: center; 
+  vertical-align:middle;
 }
 
 input, label {
@@ -35,12 +35,14 @@ input {
 
 button {
   display: inline-block;
+  margin-top: auto;
+  margin-bottom: auto;
   border-radius: 0.7em;
   font-family: inherit;
   line-height: 1.15;
   font-size: 1.2em;
   width: 4.5em;
-  height: 2em;
+  height: 1.8em;
   padding: 0;
   text-align: center;
   border-style: solid;
@@ -94,6 +96,11 @@ tr {
 
 td {
   padding-top: 0.7em;
+
+}
+
+.print {
+  margin-right: 0.5em;
 }
 
 .name_row {
@@ -125,4 +132,36 @@ td {
 
 ::placeholder {
   color: #FDFDFD;
+}
+
+
+#editForm {
+  flex-flow: row wrap;
+  padding: 1em;
+  background-color: #DADADA;
+  position: absolute;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  z-index: 20;
+  border-radius: 0.5em;
+}
+
+#message_edit {
+  display: none;
+  width: 100%;
+  height: 1em;
+}
+
+#canc {
+  margin-left:  0.5em;
+}
+
+#cover {
+  visibility: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(255, 255, 255, 0.6);
+  z-index: 10;
 }
