number and amount check

--- a/templates/print.html
+++ b/templates/print.html
@@ -19,6 +19,7 @@
       <input type="text" name="amount" id="amount"  placeholder="Amount">
       <div class="empty"></div>
       <button id="sub" type="submit" onclick="print()">Submit</button>
+      <div id='message_form'>something important!</div>
     </div>
     <div id='editForm'>
       <input type="text" name="name">    
