--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,25 @@ body {
   display: flex;
   justify-content: center; 
   vertical-align:middle;
+  flex-flow: row wrap;
+}
+
+#editForm {
+  flex-flow: row wrap;
+  padding: 1em;
+  background-color: #DADADA;
+  position: absolute;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  z-index: 20;
+  border-radius: 0.5em;
+}
+
+#message_edit, #message_form {
+  display: none;
+  width: 100%;
+  height: 1em;
 }
 
 input, label {
@@ -134,24 +153,6 @@ td {
   color: #FDFDFD;
 }
 
-
-#editForm {
-  flex-flow: row wrap;
-  padding: 1em;
-  background-color: #DADADA;
-  position: absolute;
-  visibility: hidden;
-  display: flex;
-  justify-content: center;
-  z-index: 20;
-  border-radius: 0.5em;
-}
-
-#message_edit {
-  display: none;
-  width: 100%;
-  height: 1em;
-}
 
 #canc {
   margin-left:  0.5em;
